--- a/c/cu/cus/customerservicenumbers.com.html
+++ b/c/cu/cus/customerservicenumbers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the customerservicenumbers.com privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601010041id_/http%3A//customerservicenumbers.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the customerservicenumbers.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228065512id_/http%3A//customerservicenumbers.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<!--//
@@ -21,7 +21,7 @@
 		<!--//
 			Javascript 
 		//-->
-		<script type="text/javascript" src="js/jquery-1.2.3.min.js"></script>
+		<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="js/jquery-1.2.3.min.js"></script>
 		<script type="text/javascript" src="js/csn.js"></script>
 		<script type="text/javascript" src="js/niftycube.js"></script>
 		<script type="text/javascript">
@@ -135,7 +135,7 @@ div.Section1
 			<table cellpadding="0" cellspacing="0" id="tab_table">
 				<tbody><tr>
 					<td>
-						<a href="default.aspx" title="Home"><img src="images/NewMenu/home.gif" alt="Home" name="home" border="0" id="home" onmouseover="MM_swapImage('home','','images/NewMenu/home_f2.gif',1)" onmouseout="MM_swapImgRestore()"></a>
+						<a href="/" title="Home"><img src="images/NewMenu/home.gif" alt="Home" name="home" border="0" id="home" onmouseover="MM_swapImage('home','','images/NewMenu/home_f2.gif',1)" onmouseout="MM_swapImgRestore()"></a>
 					</td>
 					<td>
 						<a href="AboutUs.aspx" title="About Us"><img src="images/NewMenu/about_us.gif" alt="About Us" name="about_us" border="0" id="about_us" onmouseover="MM_swapImage('about_us','','images/NewMenu/about_us_f2.gif',1)" onmouseout="MM_swapImgRestore()"></a>
@@ -331,11 +331,14 @@ notification.</span><o:p></o:p></p>
 					</p>
 				</div>
         </div>
-         <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-        <script type="text/javascript">
-            var pageTracker = _gat._getTracker("UA-4739089-1"); pageTracker._initData(); pageTracker._trackPageview(); 
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-45988760-1', 'customerservicenumbers.com');
+          ga('send', 'pageview');
         </script>
 
 
