--- a/m/me/mel/melodika.net.html
+++ b/m/me/mel/melodika.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the melodika.net privacy policy that was archived on 2013-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130529212658id_/http%3A//www.melodika.net/index.php%3Foption%3Dcom_content%26task%3Dview%26id%3D7090%26Itemid%3D53) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the melodika.net privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228092349id_/http%3A//www.melodika.net/index.php%3Foption%3Dcom_content%26task%3Dview%26id%3D7090%26Itemid%3D53) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta name="google-site-verification" content="drfrycvtg7MCLGWav9OB878BUtrcQOdYjb8lmmo63ow">
@@ -73,7 +73,7 @@ ch_color_bg = "E6EEF2";
         <td colspan="2"><table width="100%" height="24" border="0" cellpadding="0" cellspacing="0">
           <tbody><tr>
             <td width="50%"><span class="pathway"><a href="http://www.melodika.net/index.php" class="pathway">Home of Music</a> <img src="http://www.melodika.net/images/M_images/arrow.png" alt="arrow">   Privacy Policy </span>              <div align="left"></div></td>
-            <td width="50%" align="right"><div align="right"><span class="date">Wednesday, 29 May 2013</span></div></td>
+            <td width="50%" align="right"><div align="right"><span class="date">Saturday, 28 December 2013</span></div></td>
           </tr>
         </tbody></table></td>
         <td width="45" rowspan="2"><img src="http://www.melodika.net/templates/247extender/images/right2.jpg"></td>
@@ -127,50 +127,23 @@ ch_color_bg = "E6EEF2";
 			</tr>
 					<tr>
 			<td>
-				<table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td width="100%" bgcolor="#EEF0F0"><center><script type="text/javascript"><!--
-google_ad_client = "ca-pub-5863382378589562";
-/* Melodika-left-07032011 */
-google_ad_slot = "0758076899";
-google_ad_width = 160;
-google_ad_height = 600;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+				<table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td width="100%" bgcolor="#EEF0F0"><center><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- melodika -->
+<ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-9535076330961156" data-ad-slot="7607215452"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script></center></td></tr></tbody></table>			</td>
 		</tr>
 		</tbody></table>
 				<table cellpadding="0" cellspacing="0" class="moduletable">
 				<tbody><tr>
 			<td>
-				<script type="text/javascript"><!--
-google_ad_client = "pub-5863382378589562";
-/* Link-unit-melodika-160x90, created 12/7/08 */
-google_ad_slot = "5265581789";
-google_ad_width = 160;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>			</td>
-		</tr>
-		</tbody></table>
-				<table cellpadding="0" cellspacing="0" class="moduletable">
-				<tbody><tr>
-			<td>
-				<center><a href="http://mhlnk.com/80B952F5" target="_blank"><img src="http://media.markethealth.com/bannerServer.php?type=image&amp;ad_id=4653&amp;aid=968007" border="0"></a></center><script type="text/javascript">
-ch_client = "dobribozhilov";
-ch_width = 160;
-ch_height = 600;
-ch_type = "mpu";
-ch_sid = "melodika-left";
-ch_color_site_link = "0000CC";
-ch_color_title = "0000CC";
-ch_color_border = "E0E0E0";
-ch_color_text = "000000";
-ch_color_bg = "E0E0E0";
-</script>
-<script src="http://scripts.chitika.net/eminimalls/amm.js" type="text/javascript">
-</script>			</td>
+				<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- melodika-link -->
+<ins class="adsbygoogle" style="display:inline-block;width:160px;height:90px" data-ad-client="ca-pub-9535076330961156" data-ad-slot="3037415053"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><center><a href="http://mhlnk.com/042B0E14?cid=melodika" target="_blank"><img src="http://media.markethealth.com/bannerServer.php?type=image&amp;ad_id=4646&amp;aid=968007" border="0"></a></center>			</td>
 		</tr>
 		</tbody></table>
 				<table cellpadding="0" cellspacing="0" class="moduletable">
@@ -186,32 +159,32 @@ ch_color_bg = "E0E0E0";
 		<ul class="newsfeed">
 <li class="newsfeed">
 	<strong>
-        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149811&amp;Itemid=119" target="_blank">
-      The only real money in history</a>
+        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149822&amp;Itemid=111" target="_blank">
+      Another Red victory in Washington</a>
 	</strong>
 </li>
 <li class="newsfeed">
 	<strong>
-        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149810&amp;Itemid=109" target="_blank">
-      ECB to discover the "beauty" of negative interests</a>
+        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149821&amp;Itemid=111" target="_blank">
+      A low interest drug withdrawal mini-test</a>
 	</strong>
 </li>
 <li class="newsfeed">
 	<strong>
-        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149809&amp;Itemid=111" target="_blank">
-      Gold price "premiums" mark the birth of a parallel market</a>
+        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149820&amp;Itemid=109" target="_blank">
+      Who is selling gold?</a>
 	</strong>
 </li>
 <li class="newsfeed">
 	<strong>
-        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149808&amp;Itemid=109" target="_blank">
-      Apple is just eating itself</a>
+        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149819&amp;Itemid=109" target="_blank">
+      EU ministers to punish banks, while still obligating them to make stupid investments</a>
 	</strong>
 </li>
 <li class="newsfeed">
 	<strong>
-        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149807&amp;Itemid=109" target="_blank">
-      A simple truth behind the gold shock</a>
+        <a href="http://dobrisratings.com/index.php?option=com_content&amp;task=view&amp;id=149818&amp;Itemid=111" target="_blank">
+      Bernanke has made Italy a guinea pig of financial future</a>
 	</strong>
 </li>
     </ul>
@@ -241,15 +214,11 @@ ch_color_bg = "E0E0E0";
                       		<table cellpadding="0" cellspacing="0" class="moduletable">
 				<tbody><tr>
 			<td>
-				<center><script type="text/javascript"><!--
-google_ad_client = "pub-5863382378589562";
-/* 468x60, created 4/28/08 */
-google_ad_slot = "7866371182";
-google_ad_width = 468;
-google_ad_height = 60;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+				<center><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- melodika-top -->
+<ins class="adsbygoogle" style="display:inline-block;width:468px;height:60px" data-ad-client="ca-pub-9535076330961156" data-ad-slot="5990881455"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script></center>			</td>
 		</tr>
 		</tbody></table>
@@ -296,15 +265,11 @@ google_ad_height = 60;
                         		<table cellpadding="0" cellspacing="0" class="moduletable">
 				<tbody><tr>
 			<td>
-				<hr><center><script type="text/javascript"><!--
-google_ad_client = "pub-5863382378589562";
-/* melodika-link-unit-bottom-468x15, created 12/31/08 */
-google_ad_slot = "8626861008";
-google_ad_width = 468;
-google_ad_height = 15;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+				<hr><center><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- melodika-bottom -->
+<ins class="adsbygoogle" style="display:inline-block;width:468px;height:15px" data-ad-client="ca-pub-9535076330961156" data-ad-slot="5851280653"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script></center>			</td>
 		</tr>
 		</tbody></table>
@@ -312,19 +277,12 @@ google_ad_height = 15;
 				<tbody><tr>
 			<td>
 				<hr><center><a href="http://mhlnk.com/80B952F5" target="_blank"><img src="http://media.markethealth.com/bannerServer.php?type=image&amp;ad_id=4650&amp;aid=968007" border="0"></a><!--<script type="text/javascript">
-ch_client = "dobribozhilov";
-ch_width = 468;
-ch_height = 60;
-ch_type = "mpu";
-ch_sid = "melodika-bottom";
-ch_color_site_link = "0000CC";
-ch_color_title = "0000CC";
-ch_color_border = "E6EEF2";
-ch_color_text = "000000";
-ch_color_bg = "E6EEF2";
+	doclix_pid = 16789;
+	doclix_cid = 2242;
+	doclix_w = 468;
+	doclix_h = 60;
 </script>
-<script src="http://scripts.chitika.net/eminimalls/amm.js" type="text/javascript">
-</script>--></center><hr>			</td>
+<script type="text/javascript" src="http://ads.doclix.com/adserver/serve/js/doclix_synd_ifrm.js" charset="utf-8"></script>--></center><hr>			</td>
 		</tr>
 		</tbody></table>
 		                      </div>
@@ -363,50 +321,23 @@ ch_color_bg = "E6EEF2";
 			</tr>
 					<tr>
 			<td>
-				<table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td width="100%" bgcolor="#EEF0F0"><center><script type="text/javascript"><!--
-google_ad_client = "ca-pub-5863382378589562";
-/* Melodika-right-07032011 */
-google_ad_slot = "2175300304";
-google_ad_width = 160;
-google_ad_height = 600;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+				<table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td width="100%" bgcolor="#EEF0F0"><center><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- melodika -->
+<ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-9535076330961156" data-ad-slot="7607215452"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script></center></td></tr></tbody></table>			</td>
 		</tr>
 		</tbody></table>
 				<table cellpadding="0" cellspacing="0" class="moduletable">
 				<tbody><tr>
 			<td>
-				<script type="text/javascript"><!--
-google_ad_client = "pub-5863382378589562";
-/* melodika-link-unit-right-160x90, created 12/31/08 */
-google_ad_slot = "5745757057";
-google_ad_width = 160;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>			</td>
-		</tr>
-		</tbody></table>
-				<table cellpadding="0" cellspacing="0" class="moduletable">
-				<tbody><tr>
-			<td>
-				<center><a href="http://mhlnk.com/80B952F5" target="_blank"><img src="http://media.markethealth.com/bannerServer.php?type=image&amp;ad_id=4653&amp;aid=968007" border="0"></a></center><script type="text/javascript">
-ch_client = "dobribozhilov";
-ch_width = 160;
-ch_height = 600;
-ch_type = "mpu";
-ch_sid = "melodika-right";
-ch_color_site_link = "0000CC";
-ch_color_title = "0000CC";
-ch_color_border = "E0E0E0";
-ch_color_text = "000000";
-ch_color_bg = "E0E0E0";
-</script>
-<script src="http://scripts.chitika.net/eminimalls/amm.js" type="text/javascript">
-</script>			</td>
+				<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- melodika-link -->
+<ins class="adsbygoogle" style="display:inline-block;width:160px;height:90px" data-ad-client="ca-pub-9535076330961156" data-ad-slot="3037415053"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><a href="http://mhlnk.com/042B0E14?cid=melodika" target="_blank"></a><center><a href="http://mhlnk.com/042B0E14?cid=melodika" target="_blank"><img src="http://media.markethealth.com/bannerServer.php?type=image&amp;ad_id=4646&amp;aid=968007" border="0"></a></center>			</td>
 		</tr>
 		</tbody></table>
 				<table cellpadding="0" cellspacing="0" class="moduletable">
@@ -426,6 +357,70 @@ ch_color_bg = "E0E0E0";
    var infolink_wsid = 2;
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>			</td>
+		</tr>
+		</tbody></table>
+				<table cellpadding="0" cellspacing="0" class="moduletable">
+				<tbody><tr>
+			<td>
+				<script>
+
+//Pop-under window- By JavaScript Kit
+//Credit notice must stay intact for use
+//Visit http://javascriptkit.com for this script
+
+//specify page to pop-under
+//var popunder="http://mhlnk.com/80B952F5"
+var popunder="http://www.amazon.com/dp/B00ECYVLDA"
+//var popunder="http://www.amazon.com/dp/B00E7NWOX2"
+
+
+//specify popunder window features
+//set 1 to enable a particular feature, 0 to disable
+var winfeatures="width=900,height=400,scrollbars=1,resizable=1,toolbar=1,location=1,menubar=1,status=1,directories=0"
+
+//Pop-under only once per browser session? (0=no, 1=yes)
+//Specifying 0 will cause popunder to load every time page is loaded
+var once_per_session=1
+
+///No editing beyond here required/////
+
+function get_cookie(Name) {
+  var search = Name + "="
+  var returnvalue = "";
+  if (document.cookie.length > 0) {
+    offset = document.cookie.indexOf(search)
+    if (offset != -1) { // if cookie exists
+      offset += search.length
+      // set index of beginning of value
+      end = document.cookie.indexOf(";", offset);
+      // set index of end of cookie value
+      if (end == -1)
+         end = document.cookie.length;
+      returnvalue=unescape(document.cookie.substring(offset, end))
+      }
+   }
+  return returnvalue;
+}
+
+function loadornot(){
+if (get_cookie('popunder')==''){
+loadpopunder()
+document.cookie="popunder=yes"
+}
+}
+
+function loadpopunder(){
+win2=window.open(popunder,"",winfeatures)
+win2.blur()
+window.focus()
+}
+
+if (once_per_session==0)
+loadpopunder()
+else
+loadornot()
+
+</script>			</td>
 		</tr>
 		</tbody></table>
 		</td>
