--- a/e/er/eri/ericsson.com.html
+++ b/e/er/eri/ericsson.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ericsson.com privacy policy that was archived on 2013-04-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130425040853id_/http%3A//www.ericsson.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ericsson.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228093641id_/http%3A//www.ericsson.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>Internet privacy policy - Ericsson</title>
@@ -9,6 +9,9 @@
 <meta charset="utf-8">
 <meta name="rights" content="http://www.ericsson.com/legal">
 <meta name="dcterms.rights" content="http://www.ericsson.com/legal">
+<meta name="geo.country" content="">
+<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/">
+<meta name="dc.language" content="en">
 <meta name="title" content="Internet privacy policy">
 <meta name="dcterms.title" content="Internet privacy policy">
 <meta name="keywords" content="">
@@ -21,31 +24,54 @@
 <meta name="domainType" content="Article">
 <meta name="dcterms.type" content="Article">
 <meta name="description" content="Internet privacy policy">
+<meta name="og:description" content="Internet privacy policy">
 <!--dcrPath: /EMEA/main/Internet/eipa_global/WORKAREA/main_wa/templatedata/eipa/article/data/singletons/privacy-->
 <meta name="dcrPath" content="/EMEA/main/Internet/eipa_global/WORKAREA/main_wa/templatedata/eipa/article/data/singletons/privacy">
 <!--webPath: /EMEA/main/Internet/eipa_global/WORKAREA/main_wa/web/singletons/privacy.eipa-->
 <meta name="webPath" content="/EMEA/main/Internet/eipa_global/WORKAREA/main_wa/web/singletons/privacy.eipa">
 <meta name="canonical" content="http://www.ericsson.com/article/privacy_914590152_c">
+<meta property="og:title" content="Internet privacy policy- Ericsson">
+<meta property="og:type" content="website">
 <link rel="canonical" href="http://www.ericsson.com/article/privacy_914590152_c">
-<link rel="stylesheet" type="text/css" href="/minified/sifr*ebase*elayout*ecountries*ebox*ecarousel*eeventticker*cookie_consent~r13035.css">
-<link rel="stylesheet" type="text/css" href="/shared/eipa/js/jmvc/ericsson/production~r13035.css">
-<link rel="stylesheet" type="text/css" href="/minified/eform~r13035.css">
+<link rel="stylesheet" type="text/css" href="/minified/-slash-shared-slash-eipa-slash-js-slash-jmvc-slash-ericsson-slash-resources-slash-fluid-grid-slash-grid-fluid*sifr*ebase*elayout*ecountries*ebox*ecarousel*eeventticker*cookie_consent~r14140.css">
+<link rel="stylesheet" type="text/css" href="/shared/eipa/js/jmvc/ericsson/production~r14140.css">
+<link rel="stylesheet" type="text/css" href="/minified/eform~r14140.css">
 <!--[if IE]><link rel="stylesheet" type="text/css" href="/shared/eipa/css/eiehacks.css" /><![endif]-->
 <!--[if IE 6]><link rel="stylesheet" type="text/css" href="/shared/eipa/css/eie6hacks.css" /><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" type="text/css" href="/shared/eipa/css/eie7hacks.css" /><![endif]-->
+<!--[if IE 8]><link rel="stylesheet" type="text/css" href="/shared/eipa/css/eie8hacks.css" /><![endif]-->
 <!-- BEGIN: head_javascript.jsp -->
-<script src="/cookie_consent~r13035.js" type="text/javascript"></script>
+<script>
+		 (function() {
+			if ("-ms-user-select" in document.documentElement.style && navigator.userAgent.match(/IEMobile\/10\.0/)) {
+				var msViewportStyle = document.createElement("style");
+				msViewportStyle.appendChild(
+					document.createTextNode("@-ms-viewport{width:auto!important}")
+				);
+				document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
+			}
+		})();
+</script>
+<script src="/cookie_consent_responsive~r14140-1381841855000.js" type="text/javascript"></script>
+<script type="text/javascript"> var isResponsive = false; </script>
 <!-- END: head_javascript.jsp -->
 </head>
-<body class="ePageType1">
+<body class="ePageType1 ">
 <div id="eCookieConsentDialogHolder"></div>
 <div class="eOuterWrapper">
-<div id="eHead" class="eInnerWrapper eGB">
-<div class="eWrapContainer eGB">
+<div id="eHeaderContainer" class="eInnerWrapper eGB clearfix">
+<!-- eSvnRevision eSvnRevisionHeader $Revision: 13821 $ -->
+<div id="eHead">
+<div class="eWrapContainer">
 <div id="eHeadNavigation">
 <p class="eLogoContainer">
-<a id="eHeaderLogo" title="Ericsson Home" href="/">&nbsp;</a>
+<a id="eHeaderLogo" title="Ericsson Home" href="/"><img src="/shared/eipa/images/elogo.png" alt="Ericsson"></a>
 </p>
+<div id="mobile-controls">
+<a class="navigation-button" href="#">
+<span></span>
+</a>
+</div>
 <div id="eHeadRT">
 <ul id="eHeaderToolMenu" class="eStructural">
 <li><a title="Ericsson in Social Media" class="e-social-media-hub-link" href="/social-media">Ericsson in Social Media</a></li>
@@ -285,7 +311,8 @@
 <form action="/nsearch" method="get" class="eFormSearch">
 <fieldset>
 <input type="text" class="eSearchFormInput" name="query" placeholder="" value="">
-<input type="submit" class="eSearchFormSubmit" value="">
+<input type="hidden" name="isSearchPageView" value="false">
+<input type="button" class="eSearchFormSubmit" value="">
 </fieldset>
 </form>
 </li>
@@ -311,11 +338,13 @@
 <li><a title="Publications" href="/thecompany/our_publications">Publications</a></li>
 <li class="eNoBorder"><a title="Suppliers" href="/thecompany/suppliers">Suppliers</a></li>
 </ul>
+<!-- BEGIN: Render the small image to the right in the rich menu -->
 <ul class="eGlobalMenuSpot">
 <li><a title="The Company" href="/thecompany/"><img src="/res/images/2011/thecompany_180x90.png" alt="The Company"></a></li>
 <li><h6><a title="The Company" href="/thecompany/">The Company</a></h6></li>
 <li class="eGlobalMenuText">Ericsson is shaping the way the world communicates. Read on to discover more about our company, its history and vision.</li>
 </ul>
+<!-- END: Render the small image to the right in the rich menu -->
 </div>
 <div class="eBoxBottom"></div>
 </div>
@@ -330,6 +359,7 @@
 <li><a title="Ericsson ConsumerLab" href="/thinkingahead/consumerlab">Ericsson ConsumerLab</a></li>
 <li class="eNoBorder"><a title="Networked Society" href="/thinkingahead/networked_society">Networked Society</a></li>
 </ul>
+<!-- BEGIN: Render the small image to the right in the rich menu -->
 <ul class="eGlobalMenuSpot">
 <li><a title="Tech Talk" href="/news/130206-tech-talk-microwave-capacity-evolution_244129229_c"><img src="/res/images/2013/news/130206-techtalk-microwave-capacity-evolution-180x90.jpg" alt="Tech Talk"></a></li>
 <li><h6><a title="Tech Talk" href="/news/130206-tech-talk-microwave-capacity-evolution_244129229_c">Tech Talk</a></h6></li>
@@ -340,6 +370,7 @@
 <li><h6><a title="Thinking Ahead" href="/thinkingahead">Thinking Ahead</a></h6></li>
 <li class="eGlobalMenuText">All our insights, research, and discussions are here in one place. Use them for Thinking Ahead.</li>
 </ul>
+<!-- END: Render the small image to the right in the rich menu -->
 </div>
 <div class="eBoxBottom"></div>
 </div>
@@ -368,17 +399,19 @@
 <li><a title="Equipment Manufacturers" href="/yourbusiness/equipment_manufacturer">Equipment Manufacturers</a></li>
 <li class="eNoBorder"><a title="Ericsson Channel Partners" href="/yourbusiness/channel_partner">Ericsson Channel Partners</a></li>
 </ul>
+<!-- BEGIN: Render the small image to the right in the rich menu -->
 <ul class="eGlobalMenuSpot">
 <li><a title="Your Business" href="/yourbusiness/telecom_operators/"><img src="/res/images/2011/your-business_180x90.png" alt="Your Business"></a></li>
 <li><h6><a title="Your Business" href="/yourbusiness/telecom_operators/">Your Business</a></h6></li>
 <li class="eGlobalMenuText">Take a closer look at how Ericsson can help your business excel in a rapidly evolving market.</li>
 </ul>
+<!-- END: Render the small image to the right in the rich menu -->
 </div>
 <div class="eBoxBottom"></div>
 </div>
 </li>
 <li id="eMenu3" class="eMenuLi eHasMenu">
-<a id="eMenu3Link" class="eMenuLink " href="/ourportfolio/telecom-operators">Our Portfolio<span></span></a>
+<a id="eMenu3Link" class="eMenuLink " href="/ourportfolio">Our Portfolio<span></span></a>
 <div id="eMenu3Box" class="eBox3">
 <div class="eBoxTop"><span id="eMenu3Top" class="eI7Fix"></span></div>
 <div class="eBoxBody">
@@ -387,12 +420,24 @@
 <li>
 <a href="/ourportfolio/telecom-operators">Telecom Operators</a>
 <ul>
-<li><a href="/ourportfolio/telecom-operators/communication-services">Communication Services</a></li>
-<li><a href="/ourportfolio/telecom-operators/fixed-broadband-and-convergence">Fixed Broadband and Convergence</a></li>
-<li><a href="/ourportfolio/telecom-operators/managed-services">Managed Services</a></li>
-<li><a href="/ourportfolio/telecom-operators/mobile-broadband">Mobile Broadband</a></li>
-<li><a href="/ourportfolio/telecom-operators/operations-and-business-support-systems">Operations and Business Support Systems</a></li>
-<li><a href="/ourportfolio/telecom-operators/television-and-media-management">Television and Media Management</a></li>
+<li>
+<a href="/ourportfolio/telecom-operators/communication-services">Communication Services</a>
+</li>
+<li>
+<a href="/ourportfolio/telecom-operators/fixed-broadband-and-convergence">Fixed Broadband and Convergence</a>
+</li>
+<li>
+<a href="/ourportfolio/telecom-operators/managed-services">Managed Services</a>
+</li>
+<li>
+<a href="/ourportfolio/telecom-operators/mobile-broadband">Mobile Broadband</a>
+</li>
+<li>
+<a href="/ourportfolio/telecom-operators/operations-and-business-support-systems">Operations and Business Support Systems</a>
+</li>
+<li>
+<a href="/ourportfolio/telecom-operators/television-and-media-management">Television and Media Management</a>
+</li>
 </ul>
 </li>
 <li><a href="/ourportfolio/government">Government</a></li>
@@ -407,6 +452,7 @@
 <li><a href="/ourportfolio/products/communication-core">Communication Core</a></li>
 <li><a href="/ourportfolio/products/components-and-cables">Components and Cables</a></li>
 <li><a href="/ourportfolio/products/ip-network-and-transport">IP Network and Transport</a></li>
+<li><a href="/ourportfolio/products/modems">Modems</a></li>
 <li><a href="/ourportfolio/products/operations-and-business-support">Operations and Business Support</a></li>
 <li><a href="/ourportfolio/products/radio-access">Radio Access</a></li>
 <li><a href="/ourportfolio/products/television-and-video">Television and Video</a></li>
@@ -416,17 +462,19 @@
 <ul class="eGlobalMenuGroup ourPortfolio">
 <li><a href="/ourportfolio/services">Services</a>
 <ul>
-<li><a href="/ourportfolio/services/consulting">Consulting</a></li>
-<li><a href="/ourportfolio/services/deployment">Deployment</a></li>
-<li><a href="/ourportfolio/services/learning-services">Learning Services</a></li>
 <li><a href="/ourportfolio/services/managed-services-1">Managed Services</a></li>
-<li><a href="/ourportfolio/services/optimization">Optimization</a></li>
+<li><a href="/ourportfolio/services/consulting">Consulting</a></li>
 <li><a href="/ourportfolio/services/support">Support</a></li>
+<li><a href="/ourportfolio/services/learning-services">Learning Services</a></li>
+<li><a href="/ourportfolio/services/network-roll-out">Network Roll-Out</a></li>
+<li><a href="/ourportfolio/services/network-design-and-optimization">Network Design and Optimization</a></li>
 <li><a href="/ourportfolio/services/systems-integration">Systems Integration</a></li>
 </ul>
 </li>
 <li class="eNoBorder"><a href="/ourportfolio/a-to-z">Portfolio A-Z</a></li>
 </ul>
+<!-- BEGIN: Render the small image to the right in the rich menu -->
+<!-- END: Render the small image to the right in the rich menu -->
 </div>
 <div class="eBoxBottom"></div>
 </div>
@@ -444,19 +492,22 @@
 </ul>
 <ul class="eGlobalMenuGroup">
 <li><a title="Students and Young Professionals" href="/careers/student">Students and Young Professionals</a></li>
-<li><a title="Job Openings" href="/careers/browse">Job Openings</a></li>
-<li class="eNoBorder"><a title="Access Your Profile" href="/careers/../redirect?url=https://tas-ericsson.taleo.net/careersection/2/profile.ftl">Access Your Profile</a></li>
+<li><a title="Job Opportunities" href="/careers/jobopenings">Job Opportunities</a></li>
+<li class="eNoBorder"><a title="Recruitment at Ericsson" href="/careers/recruitment">Recruitment at Ericsson</a></li>
 </ul>
+<!-- BEGIN: Render the small image to the right in the rich menu -->
 <ul class="eGlobalMenuSpot">
 <li><a title="Careers" href="/careers/"><img src="/res/images/2011/careers_180x90.png" alt="Careers"></a></li>
 <li><h6><a title="Careers" href="/careers/">Careers</a></h6></li>
 <li class="eGlobalMenuText">A career with Ericsson offers outstanding opportunities for professional and personal development in a truly global organization.</li>
 </ul>
+<!-- END: Render the small image to the right in the rich menu -->
 </div>
 <div class="eBoxBottom"></div>
 </div>
 </li>
 </ul>
+</div>
 </div>
 </div>
 </div>
@@ -498,7 +549,7 @@
 </ul>
 <ul class="eInnerMenu">
 <li>
-<a title="Responsible sourcing" href="/sourcing">Responsible sourcing</a>
+<a title="Suppliers" href="/sourcing">Suppliers</a>
 </li>
 </ul>
 <ul class="eInnerMenu">
@@ -514,6 +565,11 @@
 <ul class="eInnerMenu">
 <li>
 <a title="Local Sites" href="/local-sites">Local Sites</a>
+</li>
+</ul>
+<ul class="eInnerMenu">
+<li>
+<a title="Ericsson Enables" href="/ericssonenables">Ericsson Enables</a>
 </li>
 </ul>
 </div>
@@ -546,10 +602,14 @@
 re-visit this privacy policy on occasion to learn of new privacy practices or changes to our policy.</p>
 <h2>How to contact Ericsson about this privacy policy</h2>
 <p>It's important to us at Ericsson to hear what users have to say about our services, and our policies. If site users have any questions, concerns, or complaints about this privacy policy, or want to let us know what they think about any of our off-line and on-line products and services, they can use our "Questions and comments" form accessible from almost every page on this site.</p>
-<div class="eColGroup eBoxContent v2">
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;username=goprocessericssoncom">
-<strong>Share</strong>
-</a>
+<div class="addthis_toolbox main_share addthis_default_style" addthis:url="http://www.ericsson.com/">
+<a class="share addthis_button_facebook_like" fb:like:layout="button_count"></a>
+<a class="share addthis_button_tweet" tw:count="none"></a>
+<a class="share addthis_button_linkedin_counter" li:counter="none"></a>
+
+<a class="share addthis_button_google_plusone" g:plusone:size="medium" g:plusone:count="false"></a>
+
+<a class="share addthis_counter addthis_pill_style"></a>
 </div>
 </div>
 </div>
@@ -579,6 +639,7 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 </div><!-- //eMain -->
 <div id="eFoot" class="eInnerWrapper eGB  ">
 <div class="eWrapContainer eGB">
+<!-- eSvnRevision eSvnRevisionFooter $Revision: 13821 $ -->
 <div id="eFootLeft">
 <p id="eFootLogoContainer">
 <a id="eFooterLogo" title="Ericsson Home" href="/">&nbsp;</a>
@@ -591,7 +652,7 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 <li><a title="The Company" href="/thecompany">The Company</a></li>
 <li><a title="Thinking Ahead" href="/thinkingahead">Thinking Ahead</a></li>
 <li><a title="Your Business" href="/yourbusiness">Your Business</a></li>
-<li><a title="Our Portfolio" href="/ourportfolio/telecom-operators">Our Portfolio</a></li>
+<li><a title="Our Portfolio" href="/ourportfolio">Our Portfolio</a></li>
 <li><a title="Careers" href="/careers">Careers</a></li>
 </ul>
 </div>
@@ -617,7 +678,7 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 <a title="Press" href="/thecompany/press">Press</a>
 </li>
 <li>
-<a title="Students and Young Professionals" href="/careers/student">Students and Young Professionals</a>
+<a title="Students" href="/error-handler/404/students_young_professionals_553969845_c">Students</a>
 </li>
 <li>
 <a title="Suppliers" href="/thecompany/suppliers">Suppliers</a>
@@ -652,7 +713,7 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 <a title="Stories" href="/thecompany/stories">Stories</a>
 </li>
 <li>
-<a title="Sustainability and Corporate Responsibility" href="/article/corporate_responsibility_840987916_c">Sustainability and Corporate Responsibility</a>
+<a title="Sustainability" href="/thecompany/sustainability_corporateresponsibility">Sustainability</a>
 </li>
 </ul>
 </div>
@@ -665,10 +726,11 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 <li><a title="Contact Us" href="/contact">Contact Us</a></li>
 <li><a title="Questions and Feedback" href="/feedback">Questions and Feedback</a></li>
 <li><a title="Frequently asked questions" href="/faq">Frequently asked questions</a></li>
-<li><a title="Responsible sourcing" href="/sourcing">Responsible sourcing</a></li>
+<li><a title="Suppliers" href="/sourcing">Suppliers</a></li>
 <li><a title="Ericsson RSS Feeds" href="/rss">Ericsson RSS Feeds</a></li>
 <li><a title="Commenting Rules" href="/commentingrules">Commenting Rules</a></li>
 <li><a title="Local Sites" href="/local-sites">Local Sites</a></li>
+<li><a title="Ericsson Enables" href="/ericssonenables">Ericsson Enables</a></li>
 </ul>
 </div>
 <div class="eFootGroup">
@@ -676,7 +738,6 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 <ul>
 <li><a title="Ericsson Labs" class="eIcon eLinkExt" rel="external" href="https://labs.ericsson.com/">Ericsson Labs</a></li>
 <li><a title="Ericsson-LG" class="eIcon eLinkExt" rel="external" href="http://www.ericssonlg.com/index.html">Ericsson-LG</a></li>
-<li><a title="ST-Ericsson" class="eIcon eLinkExt" rel="external" href="http://www.stericsson.com">ST-Ericsson</a></li>
 </ul>
 </div>
 </div><!-- //eFootRightT -->
@@ -695,16 +756,42 @@ re-visit this privacy policy on occasion to learn of new privacy practices or ch
 			var l = function (key) {
 				return eResourceBundle[key];
 			}
+			// Global function for aquiring url for jsonfeeds
+			var getLocalizedUrl = function(globalUrl) {
+				if(globalUrl.indexOf('/') === 0) {
+					globalUrl = globalUrl.substr(1);	
+				}
+				return $('#eHeaderLogo').attr('href') + globalUrl;
+			}
+			var isT = function() {
+				var touch_val = (('ontouchstart' in window) || (navigator.msMaxTouchPoints > 0)),
+					isMobile = (typeof touch_val === "undefined") ? false: touch_val;
+				return isMobile;
+			}
+			var isMSIE8 = function() {
+				var status = false;
+				if($.browser.msie && parseInt($.browser.version) < 9){
+					 status = true;
+				} 
+				return status;			
+			}
 </script>
-<script src="/minified/jquery-1-dot-7-dot-min*jmvc-slash-ericsson-slash-resources-slash-webtrends-slash-webtrends~r13035.js" type="text/javascript"></script>
+<script src="/minified/jquery-1-dot-8-dot-3-dot-min*jmvc-slash-ericsson-slash-resources-slash-webtrends-slash-webtrends~r14140.js" type="text/javascript"></script>
 <script type="text/javascript">
 		steal = {
 			app: 'ericsson',
 			loaded : ['ericsson/production.css'],
-			production: '/shared/eipa/js/jmvc/ericsson/production~r13035.js'
+			production: '/shared/eipa/js/jmvc/ericsson/production~r14140.js'
 		} 			
 </script>
-<script src="/shared/eipa/js/jmvc/steal/steal.production.js?ver=r13035"></script>
+<script type="text/javascript">
+		var addthis_config = {
+			data_track_addressba: true,
+			data_ga_property: 'UA-15166137-5',
+			data_ga_social : true
+		};
+</script>
+<script src="/shared/eipa/js/jmvc/steal/steal.production.js?ver=r14140"></script>
 <script type="text/javascript">
 			//<![CDATA[
 			//]]>
