--- a/4/4w/4we/4webhelp.net.html
+++ b/4/4w/4we/4webhelp.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 4webhelp.net privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627083625id_/http%3A//4webhelp.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 4webhelp.net privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228112509id_/http%3A//www.4webhelp.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 
@@ -193,7 +193,7 @@ pageTracker._trackPageview();
 	<div id="footer" align="center"><strong>© Copyright 2002-2013, 4WebHelp Team
 	• <a href="/disclaimer.php">Disclaimer</a> • <a href="/privacy.php">Privacy Statement</a> • <a href="http://www.34sp.com/" target="_blank">UK hosting</a> provided by 34SP.com.</strong><br>
 	Page <span class="help" title="Time it took the server to put this page together - does not include the time it took your browser to retrieve and load the page">generation time</span>:
-	0.038229 seconds • 5 SQL queries executed <!--; &#8226This page last modified: 02/05/2012, 14:56 BST--></div>
+	0.024267 seconds • 5 SQL queries executed <!--; &#8226This page last modified: 02/05/2012, 14:56 GMT--></div>
 </div>
 
 
